--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -1,25 +1,5 @@
 @import-normalize;
 
-.backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: #000000e1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal {
-    width: clamp(50%, 700px, 90%);
-    height:  min(50%, 300px);
-
-    margin: auto;
-    padding: 0 2rem;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
