--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr" class="dark">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,8 +7,8 @@
         <script src="https://kit.fontawesome.com/22b81d2d14.js" crossorigin="anonymous"></script>
         <title>Game Bot</title>
     </head>
-    <body class="dark">
-        <div class="dark:bg-gray-primary bg-white-primary">
+    <body class="dark:bg-gray-primary bg-white-primary">
+        <div>
             <%- include("utils/navbar") %> 
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
