--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -1,1 +1,33 @@
-<p>True</p>
+<!DOCTYPE html>
+<html lang="fr" class="dark">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="./public/styles/styles.css">
+        <script src="https://kit.fontawesome.com/22b81d2d14.js" crossorigin="anonymous"></script>
+        <title>Game Bot</title>
+    </head>
+    <body class="dark:bg-gray-primary bg-white-primary">
+        <div>
+            <%- include("utils/navbar") %> 
+
+            <div class="text-center">
+                <div>
+                    <button class="text-discord">
+                        <i class="fab fa-discord group-hover:text-yellow"></i>
+                        
+                        Connexion avec Discord
+                    </button>
+                </div>
+                <div>
+                    <button>
+                        Connexion avec Instagram (Bientôt)
+                    </button>
+                </div>
+                <div>
+                    <p>Je n'est pas de compte</p>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
