--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -12,15 +12,14 @@
             <%- include("utils/navbar") %> 
 
             <div class="text-center">
-                <div>
-                    <button class="text-discord">
-                        <i class="fab fa-discord group-hover:text-yellow"></i>
-                        
-                        Connexion avec Discord
-                    </button>
+                <div class="group">
+                    <i class="fab fa-discord font-bold group text-blurple block group-hover:animate-rotate360"></i>
+                    <button class="font-bold text-blurple">Connexion avec Discord</button>
                 </div>
                 <div>
-                    <button>
+                    <button class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-instagram-one via-instagram-three to-instagram-six">
+                        <i class="fab fa-instagram"></i>
+                        
                         Connexion avec Instagram (Bientôt)
                     </button>
                 </div>
