[/] Fix theme error

--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -14,20 +14,20 @@
         </a>
     </div>
     <div class="block lg:hidden">
-        <button class="mobileButton flex items-center px-3 py-2 text-teal-200 border-teal-400 text-black dark:text-white hover:<%= getRandomColor() %>">
+        <button class="mobileButton flex items-center px-3 py-2 text-teal-200 border-teal-400 text-black dark:text-white hover:<%= getRandomColor() %> dark:hover:<%= getRandomColor() %>">
             <i class="fas fa-bars "></i>
         </button>
     </div>
     <div class="mobileToHidden hidden w-full flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="ml-auto text-center lg:text-justify">
-            <a href="/" class="p-10 lg:p-0 lg:hidden block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %>">
+            <a href="/" class="p-10 lg:p-0 lg:hidden block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %> dark:hover:<%= getRandomColor() %>">
                 Accueil
             </a>
-            <a href="/login" class="p-10 align-middle lg:p-0 block lg:inline-block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %>">
+            <a href="/login" class="p-10 align-middle lg:p-0 block lg:inline-block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %> dark:hover:<%= getRandomColor() %>">
                 Se connecter
             </a>
 
-            <button class="changeTheme mx-auto my-0 lg:ml-6 align-middle p-10 lg:p-0 block lg:inline-block uppercase font-bold text-black dark:text-white hover:text-yellow">
+            <button class="changeTheme mx-auto my-0 lg:ml-6 align-middle p-10 lg:p-0 block lg:inline-block uppercase font-bold text-black dark:text-white hover:text-yellow dark:hover:text-yellow">
                 <i class="fas fa-sun fa-3x"></i>
             </button>
         </div>
