--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -44,13 +44,20 @@
         }
     })
 
+    if (localStorage.theme === "dark" || (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
+        localStorage.theme = "dark"
+        document.documentElement.classList.add("dark")        
+    }
+
     document.querySelector(".changeTheme").addEventListener("click", (click) => {
-        const classList = document.querySelector("html").className.split(" ")
+        const classList = document.documentElement.className.split(" ")
 
         if (classList.includes("dark")) {
-            document.querySelector("html").classList.remove("dark")
+            localStorage.theme = "light"
+            document.documentElement.classList.remove("dark")
         } else {
-            document.querySelector("html").classList.add("dark")
+            localStorage.theme = "dark"
+            document.documentElement.classList.add("dark")
         }
     })
 </script>
