--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -14,7 +14,7 @@
             <div class="text-center">
                 <div class="group">
                     <i class="fab fa-discord font-bold group text-blurple block group-hover:animate-rotate360"></i>
-                    <button class="font-bold text-blurple">Connexion avec Discord</button>
+                    <button class="font-bold text-blurple" onclick="location.href='/api/discord/login'">Connexion avec Discord</button>
                 </div>
                 <div>
                     <button class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-instagram-one via-instagram-three to-instagram-six">
