--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -11,6 +11,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
