--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -11,6 +11,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div class="text-center">
                 <div class="group">
                     <i class="fab fa-discord font-bold group text-blurple block group-hover:animate-rotate360"></i>
