--- a/dashboard/views/utils/notif.ejs
+++ b/dashboard/views/utils/notif.ejs
@@ -23,10 +23,12 @@ function getColor(type) {
 %>
 
 <% function notif() { %>
-    <%= console.log(req.state.messages) %>
-    <div class="all-notif">
-        <% req.state.messages.forEach((message, i) => { %>
-            <div class="notif-<%= i %> text-center fixed bottom-0 right-3">
+    <div class="all-notif fixed bottom-4 flex flex-col right-3 space-y-2">
+        <% req.app.locals.messages.forEach((message, i) => { %>
+
+            <% req.app.locals.messages = req.app.locals.messages.filter(msg => msg !== message) %>
+
+            <div class="notif-<%= i %> text-center ml-auto">
                 <div class="p-2 <%= getColor(message.type) %> items-center text-white leading-none lg:rounded-full flex lg:inline-flex">
                     <span class="flex rounded-full uppercase px-2 py-1 text-xs font-bold mr-3">
                         <i class="<%= getIcon(message.type) %>"></i>
