[+] Improve main page

--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -12,35 +12,53 @@
             <%- include("utils/navbar") %> 
 
             <%- include("utils/notif") %>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur incidunt. Reprehenderit, unde, aliquid exercitationem tempore ipsum distinctio tenetur aperiam illum quas magnam nisi voluptatem iure delectus vel quos autem.</p>
+        
+            <div>
+                <div class="text-center">
+                    <a href="/api/discord/invite" class="text-dark dark:text-white hover:text-blurple dark:hover:text-blurple block lg:inline-block lg:mx-5">
+                        Ajoute le bot sur <span class="font-bold text-blurple">Discord</span>
+                    </a>
+                    <a href="https://www.instagram.com/sudrefb/" class="text-dark dark:text-white hover:gradient-instagram dark:hover:gradient-instagram hover:text-transparent dark:hover:text-transparent block lg:inline-block lg:mx-5">
+                        Joue sur <span class="font-bold text-transparent gradient-instagram">Instagram</span>
+                    </a>
+                </div>
+                <div class="text-center">
+                    <!--
+                    <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
+                        <div class="bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-lg hover:rounded-md flex items-center justify-center">
+                            <p>Petite image ?</p>
+                        </div>
+                        <div class="m-10 text-dark dark:text-white">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut nihil voluptatem dolor saepe possimus repellendus culpa ipsa reprehenderit facilis sint autem, rem aspernatur obcaecati nobis beatae numquam recusandae nostrum delectus?</p>
+                        </div>
+                    </div>
+                    -->
+                    <div class="grid grid-cols-1 items-center justify-center">
+                        <div class="group">
+                            <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
+                                <div class="flex items-center justify-center">
+                                    <p>Image</p>
+                                </div>
+                                <div class="flex items-center justify-center">
+                                    <p>Petit texte</p>
+                                </div>
+                            </div>
+                        </div><div class="group">
+                            <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
+                                <div class="flex items-center justify-center">
+                                    <p>Petit texte</p>
+                                </div>
+                                <div class="flex items-center justify-center">
+                                    <p>Image</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <p>Des petites stats miam</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
