[/] Edit variable name

--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -19,7 +19,7 @@
                     <button class="font-bold text-blurple" onclick="location.href='/api/discord/login'">Connexion avec Discord</button>
                 </div>
                 <div>
-                    <button class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-instagram-one via-instagram-three to-instagram-six">
+                    <button class="font-bold text-transparent gradient-instagram">
                         <i class="fab fa-instagram"></i>
                         
                         Connexion avec Instagram (Bientôt)
