--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -6,8 +6,8 @@
     }
 %>
 <nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6 dark:bg-gray-secondary bg-white-secondary">
-    <div class="flex items-center flex-shrink-0 text-black dark:text-white mr-6">
-        <a href="/" class="uppercase font-bold hover:<%= getRandomColor() %>">
+    <div class="flex items-center flex-shrink-0 <%= getRandomColor() %> mr-6">
+        <a href="/" class="uppercase font-bold hover:text-black dark:hover:text-white">
             <img class="h-16 inline-block mr-6 align-middle" src="../public/img/logos/Logo.png" alt="Logo"/>
             
             <span class="hidden align-middle lg:inline-block">Accueil</span>
@@ -20,12 +20,6 @@
     </div>
     <div class="mobileToHidden hidden w-full flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="ml-auto text-center lg:text-justify">
-            <!--
-            <a href="/" class="p-10 lg:p-0 lg:hidden block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %> dark:hover:<%= getRandomColor() %>">
-                Accueil
-            </a>
-            -->
-
             <% if (req.session.user) { %>
                 <a href="/statistics" class="p-10 align-middle lg:px-10 lg:py-0 block lg:inline-block uppercase font-bold text-black dark:text-white hover:<%= getRandomColor() %> dark:hover:<%= getRandomColor() %>">
                     Statistiques
