[+] Improve main page

--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -22,41 +22,53 @@
                         Joue sur <span class="font-bold text-transparent gradient-instagram">Instagram</span>
                     </a>
                 </div>
-                <div class="text-center">
-                    <!--
-                    <div class="grid grid-cols-1 lg:grid-cols-2 items-center justify-center">
-                        <div class="bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-lg hover:rounded-md flex items-center justify-center">
-                            <p>Petite image ?</p>
-                        </div>
-                        <div class="m-10 text-dark dark:text-white">
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut nihil voluptatem dolor saepe possimus repellendus culpa ipsa reprehenderit facilis sint autem, rem aspernatur obcaecati nobis beatae numquam recusandae nostrum delectus?</p>
+                <div class="flex items-center justify-center mt-10">
+                    <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                </div>
+                <div class="grid grid-cols-1 items-center justify-center">
+                    <div class="group flex items-center justify-center">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
+                            <div class="flex items-center justify-center">
+                                <p>Image</p>
+                            </div>
+                            <div class="flex items-center justify-center">
+                                <p>Petit texte</p>
+                            </div>
                         </div>
                     </div>
-                    -->
-                    <div class="grid grid-cols-1 items-center justify-center">
-                        <div class="group">
-                            <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
-                                <div class="flex items-center justify-center">
-                                    <p>Image</p>
-                                </div>
-                                <div class="flex items-center justify-center">
-                                    <p>Petit texte</p>
-                                </div>
+                    <div class="flex items-center justify-center">
+                        <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                    </div>
+                    <div class="group flex items-center justify-center">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
+                            <div class="flex items-center justify-center">
+                                <p>Image</p>
                             </div>
-                        </div><div class="group">
-                            <div class="grid grid-cols-1 lg:grid-cols-2 bg-white-secondary dark:bg-gray-secondary h-96 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
-                                <div class="flex items-center justify-center">
-                                    <p>Petit texte</p>
-                                </div>
-                                <div class="flex items-center justify-center">
-                                    <p>Image</p>
-                                </div>
+                            <div class="flex items-center justify-center">
+                                <p>Petit texte</p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="flex items-center justify-center mb-10">
+                    <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-11/12"></div>
+                </div>
+                <div class="text-xl text-center dark:text-white text-dark">
+                    <p class="m-3">Statistiques sur <span class="text-blurple font-bold">Discord</span></p>
+                    <!-- flex items-center justify-center -->
+                    <div class="block lg:flex items-center justify-center">
+                        <div class="dark:text-white text-dark block lg:inline-block">
+                            <p>UN NOMBRE INCROYABLE DE SERVEUR</p>
+                        </div>
+                        <div class="mx-3 w-0.5 h-3 dark:bg-white bg-dark hidden lg:inline-block">
+                        </div>
+                        <div class="dark:text-white text-dark block lg:inline-block">
+                            <p>UN NOMBRE DE PARTIES WOW</p>
+                        </div>
+                    </div>
+                </div>
                 <div>
-                    <p>Des petites stats miam</p>
+                    <p>Statistiques sur Instagram</p>
                 </div>
             </div>
         </div>
